--- a/gates.ipynb
+++ b/gates.ipynb
@@ -42,9 +42,8 @@
     "fulldisplay(x) = show(IOContext(stdout, :limit=>false), MIME\"text/plain\"(), x)\n",
     "\n",
     "# some gates combinations differ from the standard implementation only by a global phase\n",
-    "# in order to guarantee we have the right gate we can add the extra phase manually. The\n",
-    "# negative sign here is to facilitate the connection between code and mathematical notation.\n",
-    "global_phase(θ) = exp(-im * θ);"
+    "# in order to guarantee we have the right gate we can add the extra phase manually.\n",
+    "global_phase(θ) = exp(im * θ);"
    ]
   },
   {
@@ -56,27 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2×2 Matrix{Int64}:\n",
-       " 1   0\n",
-       " 0  -1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "id = Matrix(I,2,2)\n",
     "xgate = [0 1; 1 0]\n",
     "ygate = [0 -im; im 0]\n",
-    "zgate = [1 0; 0 -1]"
+    "zgate = [1 0; 0 -1];"
    ]
   },
   {
@@ -92,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +157,7 @@
        " 0.707107+0.0im   0.707107+0.0im"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +186,7 @@
        " 0.0-0.71im   0.0+0.71im"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -231,13 +217,13 @@
        " 0.707107  -0.707107"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hadamard = global_phase(-π/2) * ry(π/2) * rz(π)\n",
+    "hadamard = global_phase(π/2) * ry(π/2) * rz(π)\n",
     "\n",
     "hadamard |> real"
    ]
@@ -250,7 +236,15 @@
     "$$\\mathrm{H} = \\frac{1}{\\sqrt{2}} \\,\\begin{bmatrix}\n",
     "1 & 1 \\\\\n",
     "1 & -1\n",
-    "\\end{bmatrix} = e^{-i\\frac{\\pi}{2}} R_Y (\\pi/2) R_Z (\\pi) .$$"
+    "\\end{bmatrix} = e^{i\\frac{\\pi}{2}} R_Y (\\pi/2) R_Z (\\pi) .$$\n",
+    "\n",
+    "\n",
+    "However, for psycological reasons, I tend to define\n",
+    "$$\\mathrm{H} = e^{i\\frac{\\pi}{2}} R_Z (\\pi) R_Y (-\\pi/2)$$\n",
+    "because the standard form for a operator transformation is $A^\\dagger B A$ and from the second defintion we get\n",
+    "$$\\mathrm{H}^\\dagger Z \\mathrm{H} = e^{i\\frac{\\pi}{2}} R_Y (\\pi/2) \\, R_Z (\\pi) \\, R_Y (-\\pi/2) .$$\n",
+    "\n",
+    "Here I'm using $Z = e^{i\\frac{\\pi}{2}} R_Z(\\pi)$."
    ]
   },
   {
@@ -265,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +272,7 @@
        " 0  0  1  0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +377,13 @@
        " 0  0  1  0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cnot_zz = global_phase(-π/4) * (id ⊗ ry(-π/2)) * rzz(π/2) * (id ⊗ rx(π/2)) * (rz(π/2) ⊗ rz(-π/2))\n",
+    "cnot_zz = global_phase(π/4) * (id ⊗ ry(-π/2)) * rzz(π/2) * (id ⊗ rx(π/2)) * (rz(π/2) ⊗ rz(-π/2))\n",
     "\n",
     "cnot_zz |> real |> roundint "
    ]
@@ -398,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$C_{not} = e^{-i\\frac{\\pi}{4}}\n",
+    "$$C_{not} = e^{i\\frac{\\pi}{4}}\n",
     "\\big[ \\mathbb{I} \\otimes R_Y^\\dagger(\\pi/2) \\big] \\,\n",
     "R_{ZZ}(\\pi/2) \\,\n",
     "\\big[ \\mathbb{I} \\otimes R_X(\\pi/2) \\big] \\,\n",
@@ -415,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -440,12 +434,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eliminating the $\\frac{\\pi}{4}$ phase we recover the $C_{ZZ}$ gate."
+    "Eliminating the $-\\frac{\\pi}{4}$ phase we recover the $C_{ZZ}$ gate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -458,13 +452,13 @@
        " 0  0  0  -1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cz_zz = global_phase(π/4) * rzz(π/2) * (rz(-π/2) ⊗ rz(-π/2))\n",
+    "cz_zz = global_phase(-π/4) * rzz(π/2) * (rz(-π/2) ⊗ rz(-π/2))\n",
     "\n",
     "cz_zz |> real |> roundint "
    ]
@@ -473,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$C_Z = e^{i\\frac{\\pi}{4}} \\, R_{ZZ}(\\pi/2) \\,\n",
+    "$$C_Z = e^{-i\\frac{\\pi}{4}} \\, R_{ZZ}(\\pi/2) \\,\n",
     "\\big[ R_Z^\\dagger (\\pi/2) \\otimes R_Z^\\dagger (\\pi/2) \\big] .$$"
    ]
   },
@@ -500,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -589,13 +583,13 @@
        " 0  0  0  1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "swap_zz = global_phase(-π/4) *\n",
+    "swap_zz = global_phase(π/4) *\n",
     "          rxx(π/2) *\n",
     "          ryy(π/2) *\n",
     "          rzz(π/2)\n",
@@ -608,14 +602,14 @@
    "metadata": {},
    "source": [
     "In simple terms,\n",
-    "$$Swap = e^{-i\\frac{\\pi}{4}} \\, R_{XX}(\\pi/2) \\, R_{YY}(\\pi/2) \\, R_{ZZ}(\\pi/2) .$$"
+    "$$Swap = e^{i\\frac{\\pi}{4}} \\, R_{XX}(\\pi/2) \\, R_{YY}(\\pi/2) \\, R_{ZZ}(\\pi/2) .$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interactions using $\\sigma^+$ and $\\sigma^-$ using $R_{ZZ}$"
+    "## Interactions with $\\sigma^+$ and $\\sigma^-$ using $R_{ZZ}$"
    ]
   },
   {
@@ -629,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +640,7 @@
    ],
    "source": [
     "flipflop_zz(θ) = rxx(θ) * ryy(θ)\n",
-    "                \n",
+    "\n",
     "flipflop_zz(π/3) |> sparsefy |> fulldisplay"
    ]
   },
@@ -661,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +672,7 @@
    ],
    "source": [
     "sync_zz(θ) = rxx(θ) * ryy(-θ)\n",
-    "                \n",
+    "\n",
     "sync_zz(π/3) |> sparsefy |> fulldisplay"
    ]
   },
@@ -693,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +736,7 @@
    ],
    "source": [
     "asym_sync_zz(θ) = rxy(θ) * ryx(θ)\n",
-    "                \n",
+    "\n",
     "asym_sync_zz(π/3) |> sparsefy |> fulldisplay"
    ]
   },
