Add ZZZ interaction

--- a/gates.ipynb
+++ b/gates.ipynb
@@ -789,8 +789,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## $R_{ZZZ}$ in terms of $R_{ZZ}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8×8 Matrix{Int64}:\n",
+       " 1   0   0  0   0  0  0   0\n",
+       " 0  -1   0  0   0  0  0   0\n",
+       " 0   0  -1  0   0  0  0   0\n",
+       " 0   0   0  1   0  0  0   0\n",
+       " 0   0   0  0  -1  0  0   0\n",
+       " 0   0   0  0   0  1  0   0\n",
+       " 0   0   0  0   0  0  1   0\n",
+       " 0   0   0  0   0  0  0  -1"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp(im * π/2 * (zgate ⊗ zgate ⊗ zgate)) |> imag |> roundint "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8×8 Matrix{Float64}:\n",
+      " 1.0   0.0   0.0   0.0   0.0   0.0  0.0   0.0\n",
+      " 0.0  -1.0   0.0  -0.0   0.0   0.0  0.0   0.0\n",
+      " 0.0   0.0  -1.0   0.0   0.0   0.0  0.0   0.0\n",
+      " 0.0  -0.0   0.0   1.0   0.0   0.0  0.0   0.0\n",
+      " 0.0   0.0   0.0   0.0  -1.0   0.0  0.0   0.0\n",
+      " 0.0   0.0   0.0   0.0   0.0   1.0  0.0  -0.0\n",
+      " 0.0   0.0   0.0   0.0   0.0   0.0  1.0   0.0\n",
+      " 0.0   0.0   0.0   0.0   0.0  -0.0  0.0  -1.0"
+     ]
+    }
+   ],
+   "source": [
+    "rzzz(θ) = (id ⊗ rx(-π/2) ⊗ id) *\n",
+    "(id ⊗ ry(-π) ⊗ id) *\n",
+    "(rzz(π/2) ⊗ id) *\n",
+    "(id ⊗ ry(π/2) ⊗ id) *\n",
+    "(id ⊗ rzz(θ)) *\n",
+    "(id ⊗ ry(π/2) ⊗ id) *\n",
+    "(rzz(π/2) ⊗ id) *\n",
+    "(id ⊗ rx(π/2) ⊗ id)\n",
+    "\n",
+    "rzzz(π) |> sparsefy |> imag |> fulldisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8×8 Matrix{Float64}:\n",
+      " -1.0  -0.0  0.0  0.0  0.0  0.0   0.0   0.0\n",
+      " -0.0  -1.0  0.0  0.0  0.0  0.0   0.0   0.0\n",
+      "  0.0   0.0  1.0  0.0  0.0  0.0   0.0   0.0\n",
+      "  0.0   0.0  0.0  1.0  0.0  0.0   0.0   0.0\n",
+      "  0.0   0.0  0.0  0.0  1.0  0.0   0.0   0.0\n",
+      "  0.0   0.0  0.0  0.0  0.0  1.0   0.0   0.0\n",
+      "  0.0   0.0  0.0  0.0  0.0  0.0  -1.0  -0.0\n",
+      "  0.0   0.0  0.0  0.0  0.0  0.0  -0.0  -1.0"
+     ]
+    }
+   ],
+   "source": [
+    "(rzz(π) ⊗ id) |> sparsefy |> imag |> fulldisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8×8 Matrix{Float64}:\n",
+      " -1.0  0.0  0.0   0.0  -0.0  0.0  0.0   0.0\n",
+      "  0.0  1.0  0.0   0.0   0.0  0.0  0.0   0.0\n",
+      "  0.0  0.0  1.0   0.0   0.0  0.0  0.0   0.0\n",
+      "  0.0  0.0  0.0  -1.0   0.0  0.0  0.0  -0.0\n",
+      " -0.0  0.0  0.0   0.0  -1.0  0.0  0.0   0.0\n",
+      "  0.0  0.0  0.0   0.0   0.0  1.0  0.0   0.0\n",
+      "  0.0  0.0  0.0   0.0   0.0  0.0  1.0   0.0\n",
+      "  0.0  0.0  0.0  -0.0   0.0  0.0  0.0  -1.0"
+     ]
+    }
+   ],
+   "source": [
+    "(id ⊗ rzz(π)) |> sparsefy |> imag |> fulldisplay"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
-    "_**TODO...**_"
+    "_**TODO...**_\n",
+    "\n",
+    "C. H. Tseng, S. Somaroo, Y. Sharf, E. Knill, R. Laflamme, T. F. Havel, and D. G. Cory\n",
+    "Phys. Rev. A **61**, 012302 (1999)"
    ]
   }
  ],
