Algebraic of Rzzz

--- a/gates.ipynb
+++ b/gates.ipynb
@@ -789,119 +789,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $R_{ZZZ}$ in terms of $R_{ZZ}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8×8 Matrix{Int64}:\n",
-       " 1   0   0  0   0  0  0   0\n",
-       " 0  -1   0  0   0  0  0   0\n",
-       " 0   0  -1  0   0  0  0   0\n",
-       " 0   0   0  1   0  0  0   0\n",
-       " 0   0   0  0  -1  0  0   0\n",
-       " 0   0   0  0   0  1  0   0\n",
-       " 0   0   0  0   0  0  1   0\n",
-       " 0   0   0  0   0  0  0  -1"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exp(im * π/2 * (zgate ⊗ zgate ⊗ zgate)) |> imag |> roundint "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8×8 Matrix{Float64}:\n",
-      " 1.0   0.0   0.0   0.0   0.0   0.0  0.0   0.0\n",
-      " 0.0  -1.0   0.0  -0.0   0.0   0.0  0.0   0.0\n",
-      " 0.0   0.0  -1.0   0.0   0.0   0.0  0.0   0.0\n",
-      " 0.0  -0.0   0.0   1.0   0.0   0.0  0.0   0.0\n",
-      " 0.0   0.0   0.0   0.0  -1.0   0.0  0.0   0.0\n",
-      " 0.0   0.0   0.0   0.0   0.0   1.0  0.0  -0.0\n",
-      " 0.0   0.0   0.0   0.0   0.0   0.0  1.0   0.0\n",
-      " 0.0   0.0   0.0   0.0   0.0  -0.0  0.0  -1.0"
-     ]
-    }
-   ],
-   "source": [
-    "rzzz(θ) = (id ⊗ rx(-π/2) ⊗ id) *\n",
-    "(id ⊗ ry(-π) ⊗ id) *\n",
-    "(rzz(π/2) ⊗ id) *\n",
-    "(id ⊗ ry(π/2) ⊗ id) *\n",
-    "(id ⊗ rzz(θ)) *\n",
-    "(id ⊗ ry(π/2) ⊗ id) *\n",
-    "(rzz(π/2) ⊗ id) *\n",
-    "(id ⊗ rx(π/2) ⊗ id)\n",
+    "## $R_{ZZZ}$ in terms of $R_{ZZ}$\n",
+    "_PRA_ **61**, 012302 (1999)\n",
     "\n",
-    "rzzz(π) |> sparsefy |> imag |> fulldisplay"
+    "$$e^{-i\\frac{\\theta}{2} ZZZ} = R_{ZY}(-\\pi/2)\\,R_{XZ}(\\theta)\\,R_{YZ}(\\pi/2)$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$R_{ZY}(\\theta) = \\big[ \\mathbb{I} \\otimes R_X(-\\pi/2) \\big] \\,\n",
+    "R_{ZZ}(\\theta) \\,\n",
+    "\\big[ \\mathbb{I} \\otimes R_X(\\pi/2) \\big] $$\n",
+    "\n",
+    "$$R_{XZ}(\\theta) = \\big[ R_Y(\\pi/2) \\otimes \\mathbb{I} \\big] \\,\n",
+    "R_{ZZ}(\\theta) \\,\n",
+    "\\big[ R_Y(-\\pi/2) \\otimes \\mathbb{I} \\big] $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rzx(θ) = (id ⊗ ry(π/2)) * rzz(θ) * (identity ⊗ ry(-π/2))\n",
+    "\n",
+    "rxz(θ) = (ry(π/2) ⊗ id) * rzz(θ) * (ry(-π/2) ⊗ id);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rzy(θ) = (id ⊗ rx(-π/2)) * rzz(θ) * (id ⊗ rx(π/2))\n",
+    "\n",
+    "ryz(θ) = (rx(-π/2) ⊗ id) * rzz(θ) * (rx(π/2) ⊗ id);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8×8 Matrix{Float64}:\n",
-      " -1.0  -0.0  0.0  0.0  0.0  0.0   0.0   0.0\n",
-      " -0.0  -1.0  0.0  0.0  0.0  0.0   0.0   0.0\n",
-      "  0.0   0.0  1.0  0.0  0.0  0.0   0.0   0.0\n",
-      "  0.0   0.0  0.0  1.0  0.0  0.0   0.0   0.0\n",
-      "  0.0   0.0  0.0  0.0  1.0  0.0   0.0   0.0\n",
-      "  0.0   0.0  0.0  0.0  0.0  1.0   0.0   0.0\n",
-      "  0.0   0.0  0.0  0.0  0.0  0.0  -1.0  -0.0\n",
-      "  0.0   0.0  0.0  0.0  0.0  0.0  -0.0  -1.0"
+      "8×8 Matrix{ComplexF64}:\n",
+      " 0.0-1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
+      " 0.0+0.0im  0.0+1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
+      " 0.0+0.0im  0.0+0.0im  0.0+1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
+      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0-1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
+      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
+      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0-1.0im  0.0+0.0im  0.0+0.0im\n",
+      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0-1.0im  0.0+0.0im\n",
+      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+1.0im"
      ]
     }
    ],
    "source": [
-    "(rzz(π) ⊗ id) |> sparsefy |> imag |> fulldisplay"
+    "exp(-im * π/2 * (zgate ⊗ zgate ⊗ zgate)) |> sparsefy |> fulldisplay  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8×8 Matrix{Float64}:\n",
-      " -1.0  0.0  0.0   0.0  -0.0  0.0  0.0   0.0\n",
-      "  0.0  1.0  0.0   0.0   0.0  0.0  0.0   0.0\n",
-      "  0.0  0.0  1.0   0.0   0.0  0.0  0.0   0.0\n",
-      "  0.0  0.0  0.0  -1.0   0.0  0.0  0.0  -0.0\n",
-      " -0.0  0.0  0.0   0.0  -1.0  0.0  0.0   0.0\n",
-      "  0.0  0.0  0.0   0.0   0.0  1.0  0.0   0.0\n",
-      "  0.0  0.0  0.0   0.0   0.0  0.0  1.0   0.0\n",
-      "  0.0  0.0  0.0  -0.0   0.0  0.0  0.0  -1.0"
+      "8×8 Matrix{ComplexF64}:\n",
+      "  0.0-1.0im  0.0+0.0im  0.0-0.0im   0.0+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im\n",
+      "  0.0+0.0im  0.0+1.0im  0.0+0.0im  -0.0+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im\n",
+      " -0.0+0.0im  0.0+0.0im  0.0+1.0im   0.0+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im\n",
+      "  0.0+0.0im  0.0-0.0im  0.0+0.0im   0.0-1.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im\n",
+      "  0.0+0.0im  0.0+0.0im  0.0+0.0im   0.0+0.0im  0.0+1.0im   0.0+0.0im  -0.0-0.0im  0.0+0.0im\n",
+      "  0.0+0.0im  0.0+0.0im  0.0+0.0im   0.0+0.0im  0.0+0.0im   0.0-1.0im   0.0+0.0im  0.0+0.0im\n",
+      "  0.0+0.0im  0.0+0.0im  0.0+0.0im   0.0+0.0im  0.0-0.0im   0.0+0.0im   0.0-1.0im  0.0+0.0im\n",
+      "  0.0+0.0im  0.0+0.0im  0.0+0.0im   0.0+0.0im  0.0+0.0im  -0.0+0.0im   0.0+0.0im  0.0+1.0im"
      ]
     }
    ],
    "source": [
-    "(id ⊗ rzz(π)) |> sparsefy |> imag |> fulldisplay"
+    "rzzz(θ) = (rzy(-π/2) ⊗ id) *\n",
+    "          (id ⊗ rxz(θ)) *\n",
+    "          (rzy(π/2) ⊗ id)\n",
+    "\n",
+    "rzzz(π) |> sparsefy |> fulldisplay"
    ]
   },
   {
