Minor improvements in the Rzz section

--- a/gates.ipynb
+++ b/gates.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        " 0.0+0.0im  0.0+1.0im"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        " 0   0   0  1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        " 0.0+0.0im  0.0+0.0im  0.0+0.0im  1.0+0.0im"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        " 0  0  1  0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        " 0  0  1  0"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        " 0  0  0  -1"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        " 0  0  0  1"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -789,10 +789,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $R_{ZZZ}$ in terms of $R_{ZZ}$\n",
-    "_PRA_ **61**, 012302 (1999)\n",
+    "## $R_{Z3}$ in terms of $R_{ZZ}$\n",
     "\n",
-    "$$e^{-i\\frac{\\theta}{2} ZZZ} = R_{ZY}(-\\pi/2)\\,R_{XZ}(\\theta)\\,R_{YZ}(\\pi/2)$$\n",
+    "reminder:\n",
+    "\n",
+    "$$HXH=Z \\implies R_Y(-\\pi/2)\\,X\\,R_Y(\\pi/2) = Z$$\n",
+    "\n",
+    "### 3-bodies interaction\n",
+    "\n",
+    "$$\\begin{aligned}\n",
+    "e^{-i\\frac{\\theta}{2} ZZZ}\n",
+    "&= \\big[ R_{ZY}(-\\pi/2) \\otimes \\mathbb{I} \\big] \\times \\\\\n",
+    "&\\quad~ \\big[ \\mathbb{I} \\otimes R_{XZ}(\\theta) \\big] \\times \\\\\n",
+    "&\\quad~ \\big[ R_{ZY}(\\pi/2) \\otimes \\mathbb{I} \\big]\n",
+    "\\end{aligned}$$\n",
     "\n",
     "where\n",
     "\n",
@@ -802,23 +812,31 @@
     "\n",
     "$$R_{XZ}(\\theta) = \\big[ R_Y(\\pi/2) \\otimes \\mathbb{I} \\big] \\,\n",
     "R_{ZZ}(\\theta) \\,\n",
-    "\\big[ R_Y(-\\pi/2) \\otimes \\mathbb{I} \\big] $$"
+    "\\big[ R_Y(-\\pi/2) \\otimes \\mathbb{I} \\big] $$\n",
+    "\n",
+    "The combination of $YXY$ on the second qubits creates an effective $Z$ on the second qubit.\n",
+    "\n",
+    "#### sacalability\n",
+    "\n",
+    "$$N_{ZZ} = 2N_{qubits} -3$$\n",
+    "\n",
+    "$$N_{local} = 4N_{qubits} -8$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rzx(θ) = (id ⊗ ry(π/2)) * rzz(θ) * (identity ⊗ ry(-π/2))\n",
+    "rzx(θ) = (id ⊗ ry(π/2)) * rzz(θ) * (id ⊗ ry(-π/2))\n",
     "\n",
     "rxz(θ) = (ry(π/2) ⊗ id) * rzz(θ) * (ry(-π/2) ⊗ id);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,56 +847,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8×8 Matrix{ComplexF64}:\n",
-      " 0.0-1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
-      " 0.0+0.0im  0.0+1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
-      " 0.0+0.0im  0.0+0.0im  0.0+1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
-      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0-1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
-      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+1.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im\n",
-      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0-1.0im  0.0+0.0im  0.0+0.0im\n",
-      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0-1.0im  0.0+0.0im\n",
-      " 0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+0.0im  0.0+1.0im"
+      "8×8 Diagonal{ComplexF64, Vector{ComplexF64}}:\n",
+      " 0.0-1.0im      ⋅          ⋅          ⋅          ⋅          ⋅          ⋅          ⋅    \n",
+      "     ⋅      0.0+1.0im      ⋅          ⋅          ⋅          ⋅          ⋅          ⋅    \n",
+      "     ⋅          ⋅      0.0+1.0im      ⋅          ⋅          ⋅          ⋅          ⋅    \n",
+      "     ⋅          ⋅          ⋅      0.0-1.0im      ⋅          ⋅          ⋅          ⋅    \n",
+      "     ⋅          ⋅          ⋅          ⋅      0.0+1.0im      ⋅          ⋅          ⋅    \n",
+      "     ⋅          ⋅          ⋅          ⋅          ⋅      0.0-1.0im      ⋅          ⋅    \n",
+      "     ⋅          ⋅          ⋅          ⋅          ⋅          ⋅      0.0-1.0im      ⋅    \n",
+      "     ⋅          ⋅          ⋅          ⋅          ⋅          ⋅          ⋅      0.0+1.0im"
      ]
     }
    ],
    "source": [
-    "exp(-im * π/2 * (zgate ⊗ zgate ⊗ zgate)) |> sparsefy |> fulldisplay  "
+    "rz3(θ) = exp(-im * θ/2 * (zgate ⊗ zgate ⊗ zgate))\n",
+    "\n",
+    "rz3(π) |> sparsefy |> Diagonal |> fulldisplay  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8×8 Matrix{ComplexF64}:\n",
-      "  0.0-1.0im  0.0+0.0im  0.0-0.0im   0.0+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im\n",
-      "  0.0+0.0im  0.0+1.0im  0.0+0.0im  -0.0+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im\n",
-      " -0.0+0.0im  0.0+0.0im  0.0+1.0im   0.0+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im\n",
-      "  0.0+0.0im  0.0-0.0im  0.0+0.0im   0.0-1.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im\n",
-      "  0.0+0.0im  0.0+0.0im  0.0+0.0im   0.0+0.0im  0.0+1.0im   0.0+0.0im  -0.0-0.0im  0.0+0.0im\n",
-      "  0.0+0.0im  0.0+0.0im  0.0+0.0im   0.0+0.0im  0.0+0.0im   0.0-1.0im   0.0+0.0im  0.0+0.0im\n",
-      "  0.0+0.0im  0.0+0.0im  0.0+0.0im   0.0+0.0im  0.0-0.0im   0.0+0.0im   0.0-1.0im  0.0+0.0im\n",
-      "  0.0+0.0im  0.0+0.0im  0.0+0.0im   0.0+0.0im  0.0+0.0im  -0.0+0.0im   0.0+0.0im  0.0+1.0im"
+      "8×8 Diagonal{ComplexF64, Vector{ComplexF64}}:\n",
+      " 0.0-1.0im      ⋅          ⋅          ⋅          ⋅          ⋅          ⋅          ⋅    \n",
+      "     ⋅      0.0+1.0im      ⋅          ⋅          ⋅          ⋅          ⋅          ⋅    \n",
+      "     ⋅          ⋅      0.0+1.0im      ⋅          ⋅          ⋅          ⋅          ⋅    \n",
+      "     ⋅          ⋅          ⋅      0.0-1.0im      ⋅          ⋅          ⋅          ⋅    \n",
+      "     ⋅          ⋅          ⋅          ⋅      0.0+1.0im      ⋅          ⋅          ⋅    \n",
+      "     ⋅          ⋅          ⋅          ⋅          ⋅      0.0-1.0im      ⋅          ⋅    \n",
+      "     ⋅          ⋅          ⋅          ⋅          ⋅          ⋅      0.0-1.0im      ⋅    \n",
+      "     ⋅          ⋅          ⋅          ⋅          ⋅          ⋅          ⋅      0.0+1.0im"
      ]
     }
    ],
    "source": [
-    "rzzz(θ) = (rzy(-π/2) ⊗ id) *\n",
-    "          (id ⊗ rxz(θ)) *\n",
-    "          (rzy(π/2) ⊗ id)\n",
+    "rz3_zz(θ) = (rzy(-π/2) ⊗ id) *\n",
+    "            (id ⊗ rxz(θ)) *\n",
+    "            (rzy(π/2) ⊗ id)\n",
     "\n",
-    "rzzz(π) |> sparsefy |> fulldisplay"
+    "rz3_zz(π) |> sparsefy |> Diagonal |> fulldisplay"
    ]
   },
   {
@@ -888,8 +908,15 @@
     "## References\n",
     "_**TODO...**_\n",
     "\n",
-    "C. H. Tseng, S. Somaroo, Y. Sharf, E. Knill, R. Laflamme, T. F. Havel, and D. G. Cory\n",
-    "Phys. Rev. A **61**, 012302 (1999)"
+    "CH Tseng, S Somaroo, Y Sharf, E Knill, R Laflamme, TF Havel, and DG Cory, *PRA* **61**, 012302 (1999)\n",
+    "\n",
+    "R Auccaise, J Maziero, LC Céleri, DO Soares-Pinto, ER deAzevedo, TJ Bonagamba, RS Sarthour, IS Oliveira, and RM Serra, *PRL* **107**, 070501 (2011)\n",
+    "\n",
+    "TB Batalhão, AM Souza, RS. Sarthour, IS Oliveira, M Paternostro, E Lutz, and RM Serra, *PRL* **115**, 190601 (2015)\n",
+    "\n",
+    "PA Camati, JPS Peterson, TB Batalhão, K Micadei, AM Souza, RS Sarthour, IS Oliveira, and RM Serra, *PRL* **117**, 240502\n",
+    "\n",
+    "K Micadei, JPS Peterson, AM Souza, RS Sarthour, IS Oliveira, GT Landi, TB Batalhão, RM Serra & E Lutz, *Nature Comm.* **10** 2456 (2019)"
    ]
   }
  ],
